# alpes-partners-dijs-micros

./: BFF Alpes Partners API.postman_collection.json  BFF_API_DOCUMENTATION.md  README.md  SAGA_README.md  docker-compose.yml
bff/: Dockerfile  requirements.txt  run_flask.py
bff/tests/: test_bff.py
campanas/: run_flask.py
contratos/: .gitignore  pyproject.toml  requirements.txt  run_flask.py
contratos/src/alpes_partners/api/: __init__.py  contratos.py
contratos/src/alpes_partners/config/: app.py  settings.py
contratos/src/alpes_partners/modulos/contratos/aplicacion/: __init__.py  dto.py  handlers.py  mapeadores.py  servicios.py
contratos/src/alpes_partners/modulos/contratos/aplicacion/comandos/: __init__.py  base.py  crear_contrato.py
contratos/src/alpes_partners/modulos/contratos/dominio/: entidades.py  eventos.py  excepciones.py  fabricas.py  objetos_valor.py  repositorios.py
contratos/src/alpes_partners/modulos/contratos/infraestructura/: consumidores.py  consumidores_comandos.py  despachadores.py  dto.py  excepciones.py  fabricas.py  mappers.py  modelos.py  repositorio_sqlalchemy.py
contratos/src/alpes_partners/modulos/contratos/infraestructura/schema/: comandos.py
contratos/src/alpes_partners/modulos/contratos/infraestructura/schema/v1/: comandos.py  eventos.py
contratos/src/alpes_partners/seedwork/aplicacion/: handlers.py  mediador.py
contratos/src/alpes_partners/seedwork/infraestructura/: database.py
contratos/src/alpes_partners/seedwork/infraestructura/schema/v1/: mensajes.py
contratos/src/alpes_partners/seedwork/presentacion/: api.py
contratos/tests/: test_contratos.py
enviar-eventos/: enviar_evento_reportes_pulsar.py
influencers/: Dockerfile  Dockerfile.saga  docker-compose.yml  pyproject.toml  run_flask.py  run_saga.py
pulsar-vm/: create-vm.sh  manage-services.sh  startup-script.sh
reportes/: Dockerfile  pyproject.toml  run_flask.py  run_pulsar_consumer.py
reportes/src/alpes_partners/config/: settings.py  uow.py
reportes/src/alpes_partners/modulos/reportes/aplicacion/: dto.py  mapeadores.py
reportes/src/alpes_partners/modulos/reportes/aplicacion/comandos/: base.py  crear_reporte.py  modelos.py
reportes/src/alpes_partners/modulos/reportes/dominio/: entidades.py  eventos.py  excepciones.py  fabricas.py  objetos_valor.py  repositorios.py
reportes/src/alpes_partners/modulos/reportes/infraestructura/: consumidores.py  excepciones.py  fabricas.py  repositorios.py
reportes/src/alpes_partners/modulos/reportes/infraestructura/schema/: eventos.py  reportes.py
reportes/src/alpes_partners/seedwork/aplicacion/: dto.py
reportes/src/alpes_partners/seedwork/dominio/: entidades.py  excepciones.py  repositorios.py
reportes/src/alpes_partners/seedwork/infraestructura/: utils.py
reportes/src/alpes_partners/seedwork/infraestructura/schema/v1/: mensajes.py
reportes/src/alpes_partners/seedwork/presentacion/: api.py
reportes/src/reportes/config/: app.py  settings.py
reportes/src/reportes/modulos/reportes/aplicacion/: dto.py  mapeadores.py
reportes/src/reportes/modulos/reportes/aplicacion/comandos/: base.py  crear_reporte.py  modelos.py
reportes/src/reportes/modulos/reportes/dominio/: entidades.py  eventos.py  excepciones.py  fabricas.py  objetos_valor.py  repositorios.py
reportes/src/reportes/modulos/reportes/infraestructura/: consumidores.py  fabricas.py  repositorios.py
reportes/src/reportes/modulos/reportes/infraestructura/schema/: eventos.py
reportes/src/reportes/seedwork/aplicacion/: comandos.py  queries.py
reportes/src/reportes/seedwork/dominio/: eventos.py
reportes/src/reportes/seedwork/infraestructura/: database.py  eventos.py
scripts-despliegue-pulsar-vm-gcp/: docker-compose.yml
scripts-envio-eventos-pulsar/: enviar_evento_crear_contrato_pulsar.py  enviar_evento_crear_influencer_pulsar.py  enviar_evento_crear_influencer_pulsar_error.py
(+97 files in other folders)
